# chaoslock

./: .gitignore  README.md  chaoslock.py  pyproject.toml  textlock.py
chaoslock/: main.py  vault.py
